Applied HARMONY-1834 [drlvm][test][kernel] a number of test cases for java.lang kernel classes should be actualized for tests run
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/drlvm/trunk@547247 13f79535-47bb-0310-9956-ffa450edef68